# mmaWebsite

./: .env.example  .gitignore  AI_CHAT_V2_IMPROVEMENTS.md  AUTOMATED_UPDATES_README.md  BETTOR_HEAVEN_READY.md  CLAUDE.md  DATA_LOADING_FIXES.md  DATA_UPDATE_README.md  FIGHT_ORDERING_UPDATE.md  GITHUB_CHECKLIST.md  IMPROVEMENTS_README.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_ROADMAP.md  LICENSE  MIGRATION_PLAN.md  MIGRATION_STATUS.md  MOBILE_RESPONSIVE_TEST_RESULTS.md  NEXT_SESSION.md  PER_CARD_FINISH_TYPES.md  PHASE_2_ROADMAP.md  PROJECT_STATUS.md  QUICKSTART.md  RANKINGS_UPDATE_FINAL.md  RANKINGS_UPDATE_README.md  README.md  ROUNDS_AND_FINISHES_ANALYSIS.md  SETUP.md  STARTUP_FIX.md  SYSTEM_CHECKER_CARD_BY_CARD.md  SYSTEM_CHECKER_IMPROVEMENTS.md  SYSTEM_CHECKER_UPDATE_COMPLETE.md  SYSTEM_CHECKER_V2_SIMPLE.md  TESTING.md  UI_IMPROVEMENTS.md  WEIGHT_CLASS_BREAKDOWN.md  app.py  db.py  get_rankings.py  grabData.ipynb  init_db.py  (+11 more)
.github/: CONTRIBUTING.md
.serena/: project.yml
archive/: app.py  db.py  models.py  updateData.ipynb
backend/: run.py
data/: README.md  eventlog_scraping_report.txt  missing_competitions.json  missing_events.json
docs/: CHANGELOG.md  DATA_UPDATE_GUIDE.md  MMA_QUERY_SETUP.md  QUESTION_ANALYSIS.md  SETUP_STATUS.md  UI_CHANGES.md  UPDATE_NOTES.md
frontend/: jest.config.js  next.config.ts  package-lock.json  package.json
mma_website/: __init__.py  config.py
notebooks/: README.md  analyze_data.ipynb  grabData.ipynb
scripts/: README.md  add_database_indexes.py  add_indexes.py  add_indexes.sql  add_performance_indexes.sql  backfill_fighter_events.py  backfill_missing_data.py  check_indexes.py  create_rankings_history.sql  create_seed_db.py  incremental_update.py  scrape_fighter_eventlogs.py  test_single_fighter.py  update_data.py  update_missing_stats.py  update_rankings_schema.sql  validate_data_completeness.py
templates/: admin_dashboard.html  analytics_dashboard.html  base.html  card_detail.html  career_timeline.html  career_timeline_landing.html  (+16 more)
(+123 files in other folders)
